src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  body {
    background-color: #f8f8f8;
    height: 100%;
    letter-spacing: -0.6px;
    color: #242424;
  }

  main {
    background-color: #f8f8f8;
    min-width: 375px;
    max-width: 768px;
    width: 100%;
    height: 100%;
    min-height: 100vh;
    margin: auto;
    padding: 0 16px;
    padding-top: 70px;
    padding-bottom: 70px;
    display: flex;
    flex-direction: column;
  }

  input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

@layer components {
  .search_input {
    @apply w-[343px] rounded-sm border-1 px-3 py-2 pl-[50px];
  }

  .form_input {
    @apply w-full min-w-[343px] rounded-sm border-1 border-background-secondary px-3 py-2 pr-[70px];
  }

  .form_input:focus-visible {
    @apply outline-none;
  }

  .form_input::placeholder {
    @apply text-placeholder;
  }

  .input_small {
    @apply w-[240px] px-3 py-2;
  }

  .input_small::placeholder {
    @apply text-placeholder;
  }

  .input_authentication {
    @apply w-full min-w-[287px] max-w-[425px] rounded-sm border-1 border-background-secondary px-3 py-2;
  }

  .input_authentication:focus-visible {
    @apply outline-none;
  }

  .entering {
    @apply !border-primary-normal;
  }

  .warnning {
    @apply !border-status-alert;
  }

  .user_bubble {
    @apply self-end px-6 py-3 text-sm text-white shadow-md w-fit bg-primary-light;
    border-radius: 20px 4px 20px 20px;
  }

  .option {
    @apply w-fit rounded-xl border-1 bg-white px-6 py-3 text-sm font-bold -tracking-[0.8px] text-primary-normal;
  }

  .chip {
    @apply px-4 py-2 font-bold rounded-sm border-1 border-primary-normal text-primary-normal;
  }

  .selected {
    @apply !bg-primary-normal !text-white;
  }

  .button {
    @apply flex h-[56px] w-full min-w-[343px] items-center justify-center rounded-md bg-primary-normal font-bold text-white;
  }

  .button_outlined {
    @apply flex h-[56px] w-full min-w-[343px] items-center justify-center rounded-md border-1 border-primary-normal font-bold text-primary-normal;
  }

  .button_small {
    @apply h-[56px] w-[110px] rounded-sm border-1 border-primary-normal bg-white font-bold;
  }

  .info_card {
    @apply w-full p-4 bg-white rounded-xl border-1 border-primary-normal;
  }

  .button_cancel {
    @apply border-1 !bg-white !text-primary-normal;
  }

  .inactive {
    @apply border-1 !border-button-inactive !bg-white !text-gray-normal;
  }

  .button_fixed {
    @apply fixed bottom-[70px] left-1/2 flex h-20 w-full min-w-[375px] max-w-[768px] -translate-x-1/2 items-center justify-center rounded-t-lg bg-primary-normal text-2xl font-bold text-white;
  }

  .modal_background {
    @apply fixed top-0 left-0 w-full h-full bg-black opacity-40;
  }

  .modal {
    @apply fixed bottom-0 left-1/2 w-full min-w-[375px] max-w-[425px] -translate-x-1/2 rounded-t-md bg-white px-4 py-8;
  }

  .card {
    @apply flex flex-col w-full mx-auto my-4 rounded-md shadow-md;
  }

  .popup {
    @apply fixed left-1/2 top-1/2 min-h-[300px] w-[312px] -translate-x-1/2 -translate-y-1/2 rounded-md bg-white px-5 py-10 shadow-md;
  }

  .popup h3 {
    @apply text-xl font-bold text-center;
  }

  .popup .popup-button {
    @apply h-[44px] rounded-md bg-primary-normal text-white;
  }

  .popup .cancel-button {
    @apply h-[44px] w-1/2 rounded-md border-1 border-black;
  }

  .pb_top_Phrase {
    @apply w-full px-4 py-2 mt-4 mb-6 text-xs text-center bg-primary-normal;
  }

  .user_top_Phrase {
    @apply w-full px-4 py-2 mt-4 mb-6 text-xs text-center bg-secondary-heavy;
  }

  .propensity_circle {
    @apply absolute top-1/2 h-[10px] w-[10px] -translate-x-1/2 -translate-y-1/2 rounded-[5px] bg-primary-normal;
  }

  .propensity_circle {
    @apply absolute top-1/2 h-[10px] w-[10px] -translate-x-1/2 -translate-y-1/2 rounded-[5px] bg-primary-normal;
  }

  .input_button {
    @apply absolute w-4 h-4 right-10;
  }

  .input_status {
    @apply absolute right-3;
  }

  .edit_input {
    @apply block w-full p-4 bg-white rounded-sm border-1 border-button-inactive text-gray-heavy;
  }

  .edit_input:focus-visible {
    @apply outline-none;
  }

  .edit_input::placeholder {
    @apply text-placeholder;
  }

  .scroll_hidden::-webkit-scrollbar {
    display: none;
  }

  .custom-gradient {
    background-image: linear-gradient(to bottom, transparent, black);
    z-index: 10;
  }
}

